[tool.poetry]
name = "umipy"
version = "1.1.3"
description = "api wrapper for umi.top crypto"
authors = ["kesha1225"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.3"
pydantic = "^2.4.2"
PyNaCl = "^1.5.0"
mnemonic = "^0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
