[tool.poetry]
name = "umipy"
version = "2.1.1"
description = "api wrapper for umi.top crypto"
authors = ["kesha1225"]
readme = "README.md"
repository = "https://github.com/kesha1225/PyUmi"
license = "MIT"
keywords = ["umi", "crypto", "api", "wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.3"
pydantic = "^2.4.2"
PyNaCl = "^1.5.0"
mnemonic = "^0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
