[project]
name = "umipy"
version = "2.2.1"
description = "api wrapper for umi.top crypto"
authors = [{ name = "kesha1225" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "umi",
    "crypto",
    "api",
    "wrapper",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.10.3,<4",
    "pydantic>=2.4.2,<3",
    "PyNaCl>=1.5.0,<2",
    "mnemonic>=0.21,<0.22",
]

[project.urls]
Repository = "https://github.com/kesha1225/PyUmi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.8",
]
